# ObjectRelator

./: PSALM_NEW.yml  README.md  TrainandTest_SSL_multicondition.sh  annotation123.json  annotation456.json  build_exo2ego.sh  complete.yml  create_json.sh  cuda.yml  debug.sh  download.py  download_huggingface.sh  envir.sh  environment_psalm8.yml  evaluate_psalm.sh  objectrelator.yml  prepare_coco_semantic_annos_from_panoptic_annos.py  pyproject.toml  test_psalm.sh  train_SSL_multicondition.sh  train_psalm.bak.sh  train_psalm.sh  train_psalm_SSL.sh
cvpr25-egoexoObject.git/: packed-refs
datasets/: build_DAVIS.py  build_DAVIS_test.py  build_DAVIS_trainset.py  build_davis_augument.py  build_ego_exosize.py  build_ego_framelevel.py  build_ego_originalsize.py  build_egoexo.py  build_exo_framelevel.py  build_handal.py  build_ref_ego_condition.py  build_text.py  egoexo_dataset.py  filter_davis.py  mask_test.sh  missing_takes.txt
docs/: DATASET.md  INSTALL.md  Model Zoo & Quick Start.md  ModelZoo_QuickStart.md  Train & Evaluation.md  Train_Evaluation.md
objectrelator/: mm_utils.py  utils.py
objectrelator/eval/: eval_egoexo.py  eval_handal.py
scripts/: filter_takes_byname.py  get_gtmask_fuse_differentcolor.py  get_gtmask_split.py  metric_psalm.py  metric_psalm_all.py  metric_psalm_all_split.py  print_k.py  resize_img.py  sample_data.py  train.sh  train_ObjectRelator.sh  train_SSL.sh  train_SSL_MultiCondition.sh  train_davis.sh  train_exo.sh  utils.py  vis.sh  vis_davis.py  vis_psalm.py  vis_psalm_differentcolor.py  vis_psalm_multiscale.py  vis_psalm_split.py
(+60 files in other folders)
